[NTP] Hide theme attribution when custom background is set

If a custom background is set clear the theme attribution url.

Bug: 908798
Change-Id: I2c612fa2fffaff04925a1f8d04d6b5962b0ccc4c
Reviewed-on: https://chromium-review.googlesource.com/c/1354007
Reviewed-by: Ramya Nagarajan <ramyan@chromium.org>
Commit-Queue: Kyle Milka <kmilka@chromium.org>
Cr-Commit-Position: refs/heads/master@{#611905}
Former-commit-id: 22ec81755f22cfa252e395b6b6ed4a746bda05f0